2010-08-01  Asa Ayers  <Asa.Ayers@Gmail.com>

- Fixed the tooltip so that it is green if the auction price exactly matches your threshold.

2010-07-29  Asa Ayers  <Asa.Ayers@Gmail.com>

- Fixed a bug where tradeskill that don't produce items, like Inscription Research, cause IA to crash.
- Added some API enhancements.
- Added ArkInventory as an optional dependency so it will be loaded before IA.

2010-07-28  Asa Ayers  <Asa.Ayers@Gmail.com>

- Fixed a bug with the crafting threshold options.
- Updated /ia queue so that it is a shortcut to using /ia crafting and then clicking export.
- Added integration with ArkInventory. You can set up rules that use "itemauditor('profitable')" or "itemauditor('qa')" to find items managed by QuickAuctions.
- Added a public API so other addon developers can register themselves as a queue destination and added a UI so users can select that destination.
- Added a config option to control how many extra copies of an item are created if its being managed with QA. The previous behaveior was to add 25% to whatever QA would normally post. Now it defaults to 0% and is user configurable.
- Added options to enable or disable crafting deciders.

2010-07-27  Asa Ayers  <Asa.Ayers@Gmail.com>

- Fixed an infinite loop when when adding items to the Skillet queue from the crafting interface.
- For Developers: Changed ItemAuditor to no longer be in the global namespace
- For Developers: Added IAapi to the public namespace so other addons can interact with ItemAuditor.

2010-07-25  Asa Ayers  <Asa.Ayers@Gmail.com>

- Added the version number to the title in ItemAuditor options.
- Implemented a crafting interface. This will eventually replace /ia queue, but for now they are two separate features.

2010-07-22  Asa Ayers  <Asa.Ayers@Gmail.com>

- I Added an option to direct ItemAuditor output to a different chat frame.

2010-07-21  Asa Ayers  <Asa.Ayers@Gmail.com>
